--- a/7주차/5팀/7주차_석민정_과제3.md
+++ b/7주차/5팀/7주차_석민정_과제3.md
@@ -1,3 +1,10 @@
 Q. 펭귄 데이터셋의 flipper_length_mm을 불러와 막대그래프수를 15개로 지정하고, 너비를 4로 지정하여 출력하시오.
+
+<details>
+  <summary> 정답 </summary>
 penguins=sns.load_dataset('penguins')
 sns.histplot(x='flipper_length_mm', bins=15, binwidth=4, data=penguins)
+  
+![캡처](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/128315452/d6d31ff3-74a9-4f6b-9994-84db7bbfe767)
+
+</details>
