--- a/7주차/5팀/7주차_김민성_과제3.md
+++ b/7주차/5팀/7주차_김민성_과제3.md
@@ -1,1 +1,14 @@
-7
+## 문제
+
+펭귄 데이터셋을 불러온 후, 펭귄 데이터셋의 'flipper_length_mm'에 대한 막대그래프를 그려라. 이 때 막대그래프의 막대 개수를 25개로 설정해라.
+
+<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
+
+## 답
+```python
+import seaborn as sns
+import pandas as pd
+penguins = sns.load_dataset('penguins')
+sns.histplot(x='flipper_length_mm', bins=25, data=penguins)
+```
+
